css/index.css
:root {
  --yellow: #ffff00;
  --yellow-50: rgb(255, 255, 0.5);
  --blue-dark: #3f528c;
  --white: #fff;
  --grey-lightest: #ececec;
  --grey-lighter: #d3d3d3;
  --grey-light: #bcbcbc;
  --grey: #808080;
  --grey-50: rgb(128, 128, 128, 0.5);
  --grey-dark: #242629;
  --grey-darkest: #1c1d1f;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Roboto Mono", sans-serif;
  background: var(--bg);
  color: var(--text);
}

body {
  --bg: var(--white);
  --img-filter: unset;
  --theme-toggle-content: "🌚";
  --blockquote-border: var(--grey-lighter);
  --blockquote-color: var(--grey);
  --highlight-bg: var(--yellow);
  --highlight-text: var(--grey-dark);
  --checklist-border: var(--grey-lightest);
  --text: var(--grey-dark);
  --hover-text: var(--grey-dark);
  --hover-bg: linear-gradient(to right, var(--white) 50%, var(--yellow) 50%);
}

body.dark {
  --bg: var(--grey-dark);
  --img-filter: grayscale(30%);
  --theme-toggle-content: "🌞";
  --blockquote-border: var(--grey-light);
  --blockquote-color: var(--grey-light);
  --highlight-bg: var(--yellow-50);
  --highlight-text: var(--grey-dark);
  --checklist-border: var(--grey-50);
  --text: var(--white);
  --hover-text: var(--grey-dark);
  --hover-bg: linear-gradient(
    to right,
    var(--grey-dark) 50%,
    var(--yellow-50) 50%
  );
}

a {
  background-image: var(--hover-bg);
  background-position: -0% 0;
  color: inherit;
  background-size: 200% auto;
  line-height: 1.15em;
  text-decoration: underline;
  transition: background-position 0.1s ease-out;
}

a:hover {
  color: var(--hover-text);
  background-position: -99.99% 0;
}

h1 {
  font-size: 2rem;
  line-height: calc(36 / 32);
}

h6 {
  font-weight: 300;
}

blockquote {
  border-left: solid 5px var(--blockquote-border);
  color: var(--blockquote-color);
  padding: 0 1rem;
}

img {
  filter: var(--img-filter);
  width: 100%;
  height: auto;
}

main {
  flex: 1;
  display: flex;
  flex-direction: column;
  padding: 3rem 1.5rem;
}

section > ul > li {
  margin: 0.75em 0;
}

section > p {
  margin: 2em 0;
}

nav {
  width: 100%;
  text-align: left;
  padding: 1.5rem 0 1rem;
  position: fixed;
  left: 0;
  top: 0;
  background: var(--bg);
  opacity: 95%;
  backdrop-filter: blur(50px);
}

* {
  box-sizing: border-box;
}

*::selection {
  background: var(--highlight-bg);
  color: var(--highlight-text);
}

/* Heading styles to allow correct heading hierarchy without compromising on styles */
.h1 { margin-block-start: 0.67em; margin-block-end: 0.67em; font-size: 2.00em; font-weight: bold; }
.h2 { margin-block-start: 0.83em; margin-block-end: 0.83em; font-size: 1.50em; font-weight: bold; }
.h3 { margin-block-start: 1.00em; margin-block-end: 1.00em; font-size: 1.17em; font-weight: bold; }
.h4 { margin-block-start: 1.33em; margin-block-end: 1.33em; font-size: 1.00em; font-weight: bold; }
.h5 { margin-block-start: 1.67em; margin-block-end: 1.67em; font-size: 0.83em; font-weight: bold; }
.h6 { margin-block-start: 2.33em; margin-block-end: 2.33em; font-size: 0.67em; font-weight: bold; }

.nav-list {
  width: max-content;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  list-style-type: none;
  text-transform: uppercase;
  font-weight: 300;
  font-style: italic;
}

.nav-list > li {
  padding-left: 1.5rem;
  height: max-content;
}

.nav-list > li:first-of-type::before {
  content: "\200B";
  padding-right: 0;
}

.nav-list > li::before {
  content: "/";
  padding-right: 1rem;
}

.theme-toggle {
  background: transparent;
  padding: 0;
  font-style: normal;
  line-height: 0;
  border: none;
  font-size: 1.1rem;
}

.theme-toggle::before {
  content: var(--theme-toggle-content);
}

.theme-toggle:hover {
  cursor: pointer;
}

.post-list-item {
  margin-bottom: 1.5em;
}

@media screen and (min-width: 480px) {
  .nav-list {
    width: max-content;
    margin: 0;
  }
}

@media screen and (min-width: 768px) {
  main {
    width: 70%;
    margin: auto;
    padding: 2.5rem 0;
  }
}

@media screen and (min-width: 1024px) {
  main {
    width: 50%;
    margin: auto;
    padding: 2.5rem 0;
  }

  nav {
    background: transparent;
    backdrop-filter: unset;
  }
}

